syntax = "proto3";

package protocol;

import "protocol/download.proto";
import "protocol/sync.proto";

service SyncService {
    rpc SyncFile (DownloadRequest) returns (stream DownloadResponse) {
    }
    rpc SyncMeta (SyncRequest) returns (SyncResponse) {
    }
}
